--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <meta property="og:type" content="website"/>
   <meta property="og:title" content="寵物線上看"/>
   <meta property="og:image" content="https://bestian.github.io/pet-demo/img/icons/android-chrome-512x512.png"/>
-  <meta property="og:description" content="這是一個寵物網站的樣稿"//>
+  <meta property="og:description" content="這是一個寵物網站的樣稿"/>
   <meta property="og:url" content="https://bestian.github.io/pet-demo/"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.5.0/semantic.min.css" integrity="sha512-KXol4x3sVoO+8ZsWPFI/r5KBVB/ssCGB5tsv2nVOKwLg33wTFP3fmnXa47FdSVIshVTgsYk/1734xSk9aFIa4A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
